# keccaky

./: .gitignore  .pre-commit-config.yaml  BENCHMARK.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  init.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: bandit.yml  cd.yml  ci.yml  codacy.yml  codeql-analysis.yml  codeql.yml
keccaky/: __init__.py  algorithm.py  functions.py  wip.py
liby/: __init__.py
tests/: test_keccaky.py  test_version.py
tests/benchmark/: test_compare_benchmark.py  test_keccaky_benchmark.py
tests/keccaky/: ExtremelyLongMsgKAT_256.txt  LongMsgKAT_256.txt  README.md  ShortMsgKAT_256.txt  test_check_state_file_KAT_256.py  test_extremely_long_loop_msg_KAT_256.py  test_long_msg_KAT_256.py  test_short_msg_KAT_256.py  test_state.txt
tests/keccaky/tests/: 0-49999.txt  100000-149999.txt  1000000-1049999.txt  10000000-10049999.txt  10050000-10099999.txt  10100000-10149999.txt  10150000-10199999.txt  10200000-10249999.txt  10250000-10299999.txt  10300000-10349999.txt  10350000-10399999.txt  10400000-10449999.txt  10450000-10499999.txt  1050000-1099999.txt  10500000-10549999.txt  10550000-10599999.txt  10600000-10649999.txt  10650000-10699999.txt  10700000-10749999.txt  10750000-10799999.txt  10800000-10849999.txt  10850000-10899999.txt  10900000-10949999.txt  10950000-10999999.txt  1100000-1149999.txt  11000000-11049999.txt  11050000-11099999.txt  11100000-11149999.txt  11150000-11199999.txt  11200000-11249999.txt  11250000-11299999.txt  11300000-11349999.txt  11350000-11399999.txt  11400000-11449999.txt  11450000-11499999.txt  1150000-1199999.txt  11500000-11549999.txt  11550000-11599999.txt  11600000-11649999.txt  11650000-11699999.txt  (+296 more)
tests/pycryptodome/: CompareMsgKAT_256.txt  test_compare_msg_pycryptodome.py
