[tool.poetry]
name = "keccaky"
version = "0.3.0"
description = "Secure and easy-to-use keccak"
authors = ["Lucas Oliveira <olivmath@protonmail.com>"]
repository = "https://github.com/olivmath/keccaky.git"
documentation = "https://pypi.org/project/keccaky/"
readme = "README.md"
license = "MIT"
keywords = ["keccak", "ethereum", "sha3", "hash"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
conventional-pre-commit = "^3.0.0"
pytest-benchmark = "^4.0.0"
pycryptodome = "^3.19.1"
pre-commit = "^3.0.3"
coverage = "^7.2.7"
pyclean = "^2.2.0"
pytest = "^7.2.1"
black = "^23.1.0"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmark (deselect with '-m \"not slow\"')",
]
